--- a/wlwsd/AndroidManifest.xml
+++ b/wlwsd/AndroidManifest.xml
@@ -10,11 +10,10 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/lanchion"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-       
-         <activity
+        android:theme="@style/MyTheme" >
+        <activity
             android:name=".LaunchView"
             android:label="@string/app_name" >
             <intent-filter>
@@ -23,7 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main" >
+        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login" >
+        </activity>
     </application>
 
 </manifest>
