--- a/MobileLottery/src/engine.properties
+++ b/MobileLottery/src/engine.properties
@@ -1,1 +1,2 @@
 UserEngine = com.blueice.mobilelottery.engine.impl.UserEngineImpl
+CommonInfoEngine = com.blueice.mobilelottery.engine.impl.CommonInfoEngineImpl
