--- a/MobileLottery/AndroidManifest.xml
+++ b/MobileLottery/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.blueice.mobilelottery"
     android:versionCode="1"
     android:versionName="1.0" >
-
+    
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="21" />
@@ -26,7 +26,9 @@
         
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
