--- a/MobileSafe/.classpath
+++ b/MobileSafe/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="libs/commons-lang3-3.0-beta.jar"/>
 	<classpathentry kind="lib" path="libs/afinal_0.5_bin.jar"/>
+	<classpathentry kind="lib" path="libs/commons-codec.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
