--- a/MobileSafe/AndroidManifest.xml
+++ b/MobileSafe/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    
+
     <!-- afinal框架需要的权限。 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -31,19 +31,21 @@
 
         <!-- 启动界面不要Title -->
         <activity
-            android:name="com.blueice.mobilesafe.SplashActivity"
-            android:label="@string/app_name"
-            >
+            android:name=".SplashActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Home" >
+        </activity>
+        <activity android:name=".SettingActivity" >
+        </activity>
         <activity
-            android:name="com.blueice.mobilesafe.Home"
-            android:label="@string/title_activity_home" 
-            >
+            android:name=".SafeActivity"
+            android:label="@string/title_activity_safe" >
         </activity>
     </application>
 
