--- a/MobileSafe/AndroidManifest.xml
+++ b/MobileSafe/AndroidManifest.xml
@@ -20,30 +20,29 @@
 
     <!-- 读取SIM卡状态和电话状态的权限 -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    
+
     <!-- 启动接收广播的权限 -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <!-- afinal框架需要的权限。 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    
+
     <!-- 读取联系人权限 -->
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <!-- 发送短信权限 -->
-	<uses-permission android:name="android.permission.SEND_SMS"/>
-	
-	<!-- 接收短信权限 -->
-	<uses-permission android:name="android.permission.RECEIVE_SMS"/>
-	
-	<!-- GPS权限 -->
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    
+    <uses-permission android:name="android.permission.SEND_SMS" />
+
+    <!-- 接收短信权限 -->
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+
+    <!-- GPS权限 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <!-- 模拟器GPS权限 -->
-    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
-	
-		
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -73,22 +72,37 @@
         </activity>
 
         <!-- 接收BOOT_COMPLETED广播 -->
-        <receiver android:name="com.blueice.mobilesafe.receiver.BootCompleteReceiver" >
+        <receiver android:name=".receiver.BootCompleteReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-        
-        <!-- 接收SMS_RECEIVED广播 定义的优先级别-->
-        <receiver android:name="com.blueice.mobilesafe.receiver.SMSReceiver" >
-            <intent-filter android:priority="1000">
-                <action android:name="android.provider.Telephony.SMS_RECEIVED"/>"
+
+        <!-- 接收SMS_RECEIVED广播 定义的优先级别 -->
+        <receiver android:name=".receiver.SMSReceiver" >
+            <intent-filter android:priority="1000" >
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+"
             </intent-filter>
         </receiver>
-        
+
         <!-- GPS获取服务 -->
-        <service android:name="com.blueice.mobilesafe.service.GPSService"/>
-        
+        <service android:name=".service.GPSService" />
+
+        <!-- 一键锁屏、数据删除等与设备管理员相关的权限 description和label是显示在设备管理中文字信息。 -->
+        <receiver
+            android:name=".receiver.DeviceAdmin"
+            android:description="@string/sample_device_admin_description"
+            android:label="@string/sample_device_admin"
+            android:permission="android.permission.BIND_DEVICE_ADMIN" >
+            <meta-data
+                android:name="android.app.device_admin"
+                android:resource="@xml/device_admin_sample" />
+
+            <intent-filter>
+                <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
+            </intent-filter>
+        </receiver>
 
         <activity
             android:name=".Setup1Activity"
@@ -109,6 +123,14 @@
         <activity
             android:name=".SelectContactActivity"
             android:label="@string/title_activity_select_contact" >
+        </activity>
+        <activity
+            android:name=".ToolsActivity"
+            android:label="@string/title_activity_tools" >
+        </activity>
+        <activity
+            android:name=".NumberQueryActivity"
+            android:label="@string/title_activity_number_query" >
         </activity>
     </application>
 
