--- a/USB_HID/AndroidManifest.xml
+++ b/USB_HID/AndroidManifest.xml
@@ -4,12 +4,17 @@
     android:versionCode="1"
     android:versionName="1.0" >
     
-     <!-- <uses-permission android:name="android.permission.HARDWARE_TEST" /> -->
+     <!-- USB HOST -->
      <uses-feature android:name="android.hardware.usb.host" android:required="true"/>
      
+     <uses-permission  
+        android:name="android.hardware.usb.host"  
+        android:required="false" />  
+
+     
     <uses-sdk
-        android:minSdkVersion="10"
-        android:targetSdkVersion="10" />
+        android:minSdkVersion="14"
+        android:targetSdkVersion="20" />
 
     <application
         android:allowBackup="true"
